bad/assign_field_class_arr_elem_int.example_compiler_output
ERROR
[1mbad/assign_field_class_arr_elem_int.lat:9:20: [1;31merror: [0;1massigning to `Y` from incompatible type `int`[m
	(new C[1])[2].fld = 42;
	                  [1;32m^[m
